# nexuschats

./: .gitignore  Cargo.toml  README.md  dfx.json  did.sh  mops.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  webpack.config.js
backend/canisters/chat/: Cargo.toml
backend/canisters/chat/src/: lib.rs
backend/canisters/group/: Cargo.toml
backend/canisters/project/: Cargo.toml
backend/canisters/projects_manager/: Cargo.toml
backend/canisters/projects_manager/src/: lib.rs
backend/canisters/storage/: Cargo.toml
backend/canisters/users/: Cargo.toml
backend/chat/: chat.did
backend/chat/src/: lib.rs
backend/chat_manager/: Cargo.toml
backend/management/: Cargo.toml
backend/management/src/: lib.rs
backend/user/: Cargo.toml
backend/user_manager/: Cargo.toml
nexuschats_backend/chat/: utils.mo
src/nexuschats_backend/canisters/chat/: Cargo.toml
src/nexuschats_backend/canisters/group/: Cargo.toml
src/nexuschats_backend/canisters/manager/: Cargo.toml
src/nexuschats_backend/canisters/project/: Cargo.toml
src/nexuschats_backend/canisters/projects/: Cargo.toml  projects.did
src/nexuschats_backend/canisters/projects_manager/: Cargo.toml
src/nexuschats_backend/canisters/users/: Cargo.toml  users.did
src/nexuschats_backend/canisters/users/src/: lib.rs
src/nexuschats_backend/canisters/users/src/api/: mod.rs  query.rs  updates.rs
src/nexuschats_backend/canisters/users/src/common/: mod.rs
src/nexuschats_backend/canisters/users/src/service/: mod.rs  query.rs  updates.rs  user_types.rs
src/nexuschats_backend/chat/: main.mo  types.mo
src/nexuschats_backend/types/: Cargo.toml
src/nexuschats_backend/types/src/: chat.rs  group.rs  (+2 more)
src/nexuschats_frontend/: package.json  tailwind.config.js  tsconfig.json
src/nexuschats_frontend/src/: App.tsx  index.html  index.js
(+11 files in other folders)
