[workspace]
members = [
    "backend/chat",
    "backend/management",
    "backend/chat_manager",
    "backend/user",
    "backend/user_manager",
]
resolver = "2"
[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.4"
