[workspace]
members = [
    "src/nexuschats_backend/canisters/chat",
    "src/nexuschats_backend/canisters/group",
    "src/nexuschats_backend/canisters/project",
    "src/nexuschats_backend/canisters/users",
    "src/nexuschats_backend/canisters/projects_manager",
    "src/nexuschats_backend/canisters/storage",
    "src/nexuschats_backend/types",
]
resolver = "2"
[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.4"
