[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-stable-structures = { workspace = true }
types = { path = "../../types" }
